[gd_scene load_steps=65 format=3 uid="uid://b8qj4vqtrv3n6"]

[ext_resource type="Script" uid="uid://c8520ir80kgee" path="res://scenes/mockup.gd" id="1_gee1i"]
[ext_resource type="Texture2D" uid="uid://7rxx03jt7b1t" path="res://assets/images/Background.png" id="1_vq05u"]
[ext_resource type="Texture2D" uid="uid://1ujb1ldkcjw0" path="res://assets/images/SlotMachine.png" id="2_4flgv"]
[ext_resource type="Texture2D" uid="uid://brx6op25ouocn" path="res://assets/images/SlotMachine_Screen.png" id="3_d88kc"]
[ext_resource type="Texture2D" uid="uid://q4ilo0ml7qod" path="res://assets/images/Lever.png" id="4_h6veu"]
[ext_resource type="Texture2D" uid="uid://cisak3oeox7w5" path="res://assets/images/dot-matrix.png" id="4_kpaja"]
[ext_resource type="Texture2D" uid="uid://crph8lodjemr8" path="res://assets/images/Swap-Button.png" id="7_0pqam"]
[ext_resource type="Texture2D" uid="uid://duwyx17uchidi" path="res://assets/images/Reel-Background.png" id="7_py03c"]
[ext_resource type="Texture2D" uid="uid://dyqhvkl28wpfi" path="res://assets/images/Up-Down-Button.png" id="8_6hw4d"]
[ext_resource type="Texture2D" uid="uid://dh5ipd4w1poqt" path="res://assets/images/Options-Button.png" id="9_4m825"]
[ext_resource type="Texture2D" uid="uid://duyv1nyjx45v6" path="res://assets/images/reel-spin.png" id="10_d88kc"]
[ext_resource type="Texture2D" uid="uid://5g8tn30ok5kx" path="res://assets/images/characters-Sheet.png" id="11_4m825"]
[ext_resource type="Texture2D" uid="uid://bl4ov3xflsvdm" path="res://assets/images/character-select.png" id="11_py03c"]
[ext_resource type="PackedScene" uid="uid://dsx1e58i5bbvk" path="res://ui/side_panel.tscn" id="13_d88kc"]
[ext_resource type="PackedScene" uid="uid://0nq2yk2x4llr" path="res://ui/buttons.tscn" id="14_kpaja"]

[sub_resource type="AtlasTexture" id="AtlasTexture_erhge"]
atlas = ExtResource("10_d88kc")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubigr"]
atlas = ExtResource("10_d88kc")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_jasy1"]
atlas = ExtResource("10_d88kc")
region = Rect2(640, 0, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_lesqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erhge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubigr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jasy1")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_d88kc"]
atlas = ExtResource("11_4m825")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpaja"]
atlas = ExtResource("11_4m825")
region = Rect2(32, 0, 32, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_gee1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d88kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpaja")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ocpw7"]
atlas = ExtResource("11_4m825")
region = Rect2(0, 72, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt7go"]
atlas = ExtResource("11_4m825")
region = Rect2(32, 72, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dbgj"]
atlas = ExtResource("11_4m825")
region = Rect2(64, 72, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u17q"]
atlas = ExtResource("11_4m825")
region = Rect2(96, 72, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_khla4"]
atlas = ExtResource("11_4m825")
region = Rect2(128, 72, 32, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_dy4si"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocpw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt7go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dbgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u17q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khla4")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tvyxi"]
atlas = ExtResource("11_4m825")
region = Rect2(0, 96, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dup6c"]
atlas = ExtResource("11_4m825")
region = Rect2(32, 96, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wijqv"]
atlas = ExtResource("11_4m825")
region = Rect2(64, 96, 32, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vl63q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvyxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dup6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wijqv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_v73v5"]
atlas = ExtResource("4_h6veu")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_2whp5"]
atlas = ExtResource("4_h6veu")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqijp"]
atlas = ExtResource("4_h6veu")
region = Rect2(640, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0umy"]
atlas = ExtResource("4_h6veu")
region = Rect2(960, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhgxg"]
atlas = ExtResource("4_h6veu")
region = Rect2(1280, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_h88hh"]
atlas = ExtResource("4_h6veu")
region = Rect2(1600, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_4se8r"]
atlas = ExtResource("4_h6veu")
region = Rect2(1920, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tglm"]
atlas = ExtResource("4_h6veu")
region = Rect2(2240, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_5svkg"]
atlas = ExtResource("4_h6veu")
region = Rect2(2560, 0, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_lqw7r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v73v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2whp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqijp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0umy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhgxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h88hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4se8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tglm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5svkg")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_f4dnq"]
atlas = ExtResource("7_0pqam")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3jam"]
atlas = ExtResource("7_0pqam")
region = Rect2(320, 0, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_1fcbe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4dnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3jam")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c63va"]
atlas = ExtResource("8_6hw4d")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh5c4"]
atlas = ExtResource("8_6hw4d")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjluu"]
atlas = ExtResource("8_6hw4d")
region = Rect2(640, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_53ncp"]
atlas = ExtResource("8_6hw4d")
region = Rect2(960, 0, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_jhhqc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c63va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh5c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjluu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53ncp")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0hme8"]
atlas = ExtResource("9_4m825")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cg8h"]
atlas = ExtResource("9_4m825")
region = Rect2(320, 0, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2ulw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hme8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cg8h")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kpaja"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gee1i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ocpw7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pt7go"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6dbgj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4u17q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_khla4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dy4si"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tvyxi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dup6c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wijqv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_gee1i")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("1_vq05u")

[node name="SlotMachineBase" type="Sprite2D" parent="Background"]
z_index = 1
texture = ExtResource("2_4flgv")

[node name="ReelSpin" type="AnimatedSprite2D" parent="Background/SlotMachineBase"]
visible = false
sprite_frames = SubResource("SpriteFrames_lesqr")
autoplay = "default"
frame_progress = 0.0574244

[node name="Screen" type="Sprite2D" parent="Background/SlotMachineBase"]
z_as_relative = false
position = Vector2(0, -47)
texture = ExtResource("3_d88kc")

[node name="SelectionCircle" type="Sprite2D" parent="Background/SlotMachineBase/Screen"]
visible = false
position = Vector2(27, 46)
texture = ExtResource("11_py03c")

[node name="Warrior" type="AnimatedSprite2D" parent="Background/SlotMachineBase/Screen/SelectionCircle"]
z_as_relative = false
position = Vector2(-48, -50.18)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_gee1i")
autoplay = "default"
frame_progress = 0.654798

[node name="Archer" type="AnimatedSprite2D" parent="Background/SlotMachineBase/Screen/SelectionCircle"]
position = Vector2(-22, -47.18)
sprite_frames = SubResource("SpriteFrames_dy4si")
animation = &"attack"
autoplay = "attack"
frame_progress = 0.375255

[node name="Rogue" type="AnimatedSprite2D" parent="Background/SlotMachineBase/Screen/SelectionCircle"]
position = Vector2(5, -51.18)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_vl63q")
autoplay = "default"
frame_progress = 0.696083

[node name="MatrixFilter" type="Sprite2D" parent="Background/SlotMachineBase/Screen"]
position = Vector2(-1, 47)
texture = ExtResource("4_kpaja")

[node name="ReelBackground" type="Sprite2D" parent="Background/SlotMachineBase"]
visible = false
texture = ExtResource("7_py03c")

[node name="Lever" type="AnimatedSprite2D" parent="Background/SlotMachineBase"]
sprite_frames = SubResource("SpriteFrames_lqw7r")
frame_progress = 0.606139

[node name="Buttons" type="Node2D" parent="Background/SlotMachineBase"]
visible = false

[node name="RotateButton" type="AnimatedSprite2D" parent="Background/SlotMachineBase/Buttons"]
sprite_frames = SubResource("SpriteFrames_1fcbe")
frame_progress = 0.955934

[node name="UpDownButton" type="AnimatedSprite2D" parent="Background/SlotMachineBase/Buttons"]
sprite_frames = SubResource("SpriteFrames_jhhqc")
autoplay = "default"
frame_progress = 0.627877

[node name="OptionsButton" type="AnimatedSprite2D" parent="Background/SlotMachineBase/Buttons"]
sprite_frames = SubResource("SpriteFrames_g2ulw")
autoplay = "default"
frame_progress = 0.861428

[node name="SidePanel" parent="." instance=ExtResource("13_d88kc")]
offset_left = 70.0
offset_right = 70.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 77.19
offset_top = 153.985
offset_right = 242.9
offset_bottom = 174.94

[node name="Buttons" parent="UI/Control" instance=ExtResource("14_kpaja")]
z_index = 1
z_as_relative = false
layout_mode = 1
offset_left = -0.190002
offset_top = -9.4625
offset_right = -0.190002
offset_bottom = 8.5375

[node name="SwapButton" parent="UI/Control/Buttons" index="3"]
action_mode = 0

[node name="Button" type="Button" parent="UI"]
offset_left = 272.0
offset_top = 101.0
offset_right = 280.0
offset_bottom = 109.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_kpaja")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_gee1i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ocpw7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_pt7go")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6dbgj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4u17q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_khla4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dy4si")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tvyxi")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_dup6c")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wijqv")

[connection signal="pressed" from="UI/Control/Buttons/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]

[editable path="UI/Control/Buttons"]
